Sat Jun 24 00:13:53 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Thumbnails, when clicked, now all open the clicked image in the
	same window. Much better for browsing.
	* Menu fixups, more efficient now. Also, better context menus,
	having the right options for the right window types.
	* If you open a thumbnail, and then delete it or remove it from
	the filelist, the thumbnail view will update to show the
	fact. This is cool :-)

Fri Jun 23 17:15:07 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Depreciated the FEH_OPTIONS envrionment variable in favour of
	the configuration file themes.

Fri Jun 23 14:46:21 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Mwahahaha. Asynchronous events for index, thumbnails and
	collages. All events are handled while the images are
	generated. You can quit, bring up menus, zoom, pan and rotate, all
	whilst the image is still being created. Much better.
	* Pass the progress function around instead of using the
	context. Kills two bugs.

Fri Jun 23 14:11:56 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Documentation fixups.
	* --thumnbails can also be called with -t now.
	* --title-font no longer has a short option.
	* --theme is now also -T.
	* Release preparations.

Fri Jun 23 12:54:49 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* You can now select --bg trans to give indexes, collages,
	montages and thumbnail selectors a transparent background.

Fri Jun 23 12:18:44 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed a couple of minor bugs
	* You can now open the same image multiple times... If you really
	want to...

Fri Jun 23 11:37:56 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Thumbnails now stored in a linked list.

Thu Jun 22 23:57:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Optimisations to thumb hilites. Only show hilite when you can
	click to open an image, don't show when over emtpy space, and 
	don't re-render if the selection hasn't changed from the last